:map: Add location

--- a/index.html
+++ b/index.html
@@ -109,25 +109,25 @@
                 <div class="col-sm-3">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>2015<br>June 25</h3>
+                    <h3>2017<br>Feb 20 - 22</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-ios-location"></i>
-                    <h3>California<br>USA</h3>
+                    <h3>Cambridge<br>UK</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-pricetags"></i>
-                    <h3>150<br>Tickets</h3>
+                    <h3>50<br>Tickets</h3>
 
                 </div>
                 <div class="col-sm-3">
 
                     <i class="ion-speakerphone"></i>
-                    <h3>06<br>Speakers</h3>
+                    <h3>02<br>Invited speakers</h3>
 
                 </div>
             </div><!-- row -->
@@ -564,7 +564,7 @@
                 <div class="col-sm-3">
                     <h3 class="section-title">Event Location</h3>
                     <address>
-                        <p>Eardenia<br> The Grand Hall<br> House # 08, Road #52, Street<br> Phone: +1159t3764<br> Email: example@mail.com</p>
+                        <p>Rodger Needham Building<br> University Information Services<br> West Cambridge<br> Email: fs395@cam.ac.uk</p>
                     </address>
                 </div>
                 <div class="col-sm-9">
