:art: :fire: Remove unused sections and format

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <!-- logo image  -->
                         <img src="assets/images/logo.png" alt="Logo">
 
-                        2017 KOKKOS 
+                        2018 KOKKOS Workshop
                     </a>
                 </div>
 
@@ -57,7 +57,7 @@
     <header id="site-header" class="site-header valign-center">
         <div class="intro">
 
-            <h2>21 - 23 February, 2017 / Cambridge</h2>
+            <h2>21 - 23 February, 2018 / Cambridge</h2>
 
             <h1>Programming multi-core and many-core HPC systems using Kokkos</h1>
 
@@ -71,30 +71,24 @@
             <div class="row">
                 <div class="col-sm-6">
 
-                    <h3 class="section-title">About Us</h3>
+                    <h3 class="section-title">About the workshop</h3>
 
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand enes. We can't give you back the weekends you worked, or erase the pain ebeing forced to make the logo bigger. But if you submit your best work we ajusts might be able to give the chance to show you best digital marketing.</p>
+                    <p>Thanks to the support of the USA-UK RSE travel fund exchange programme, University of Cambridge is organizing a 2.5-days training event and mini-hackathon with two special guests from Sandia National Laboratory: Dr Christian Trott and Dr H. Carter Edwards, the two core developers and contributors of Kokkos.</p>
 
-                    <figure>
-                        <img alt="" class="img-responsive" src="assets/images/about-us.jpg">
-                    </figure>
+                    <ul class="list-arrow-right">
 
+                        <li>Learn from the KOKKOS developers</li>
+                        <li>Dedicated hands-on tutorials</li>
+
+                    </ul>
                 </div><!-- /.col-sm-6 -->
 
                 <div class="col-sm-6">
 
-                    <h3 class="section-title multiple-title">What is Our Goal?</h3>
+                    <h3 class="section-title multiple-title">What is Kokkos?</h3>
 
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand enes. We can't give you back the weekends you worked, or erase the pain ebeing forced to make the logo bigger. But if you submit your best work we ajusts might be able to give the chance to show you best digital marketing.</p>
-
-                    <ul class="list-arrow-right">
-
-                        <li>Learn from the best Asian Social Media Experts &amp; Case Studies</li>
-                        <li>Have dedicated 2-to-1 meetings with the experts</li>
-                        <li>Reach more consumers for less by learning new digital media skills</li>
-                        <li>Save money when spending in online advertising</li>
-
-                    </ul>
+                    <p>Kokkos implements a programming model in C++ for writing performance portable applications targeting all major HPC platforms. For that purpose it provides abstractions for both parallel execution of code and data management. Kokkos is designed to target complex node architectures with N-level memory hierarchies and multiple types of execution resources. The Kokkos C++ library enables applications and domain libraries to achieve performance portability on diverse manycore architectures by unifying abstractions for both fine-grain data parallelism and memory access patterns. It currently can use OpenMP, pthreads and CUDA as backend programming models.
+The event will be free of charge and hosted by Research Computing Service of University of Cambridge. It is open to all researchers and scientists of EPSRC domain which have access to any Tier-1 and Tier-2 facilities (e.g. CSD3). Researchers affiliated to other research councils (e.g. STFC) are welcome to attend as well. Catering will be provided.</p>
 
                 </div><!-- /.col-sm-6 -->
             </div><!-- /.row -->
@@ -107,7 +101,7 @@
                 <div class="col-sm-3">
 
                     <i class="ion-ios-calendar"></i>
-                    <h3>2017<br>Feb 21 - 23</h3>
+                    <h3>2018<br>Feb 21 - 23</h3>
 
                 </div>
                 <div class="col-sm-3">
@@ -234,7 +228,7 @@
                 </div>
             </div>
     </section>
-
+    <!--
     <section id="partner" class="section partner">
         <div class="container">
             <div class="row">
@@ -272,6 +266,7 @@
                 </div>
             </div>
     </section>
+    -->
 
     <section id="faq" class="section faq">
         <div class="container">
@@ -293,8 +288,7 @@
 
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h3>Hello</h3>
-                                    <p>Lorem Ipsum</p>
+                                    <p>The event is free, please register at <a href=""></a></p>
                                 </div>
                             </div>
                         </div>
@@ -307,10 +301,10 @@
                             </div>
 
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">Registration and lunch</div>
                             </div>
                         </div>
-
+                        <!--
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
@@ -334,7 +328,7 @@
                                 <div class="panel-body">Hello</div>
                             </div>
                         </div>
-
+                        -->
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingFive">
                                 <h4 class="panel-title">
@@ -343,14 +337,14 @@
                             </div>
 
                             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">Email us</div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
     </section>
-
+    <!--
     <section id="photos" class="section photos">
         <div class="container">
             <div class="row">
@@ -370,6 +364,7 @@
             </div>
         </div>
     </section>
+    -->
 
     <section id="location" class="section location">
         <div class="container">
@@ -391,13 +386,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <p class="site-info">RSE Cambridge</p>
+                  <p class="site-info">RSE Cambridge</p>
+                  <!--
                     <ul class="social-block">
                         <li><a href=""><i class="ion-social-twitter"></i></a></li>
                         <li><a href=""><i class="ion-social-facebook"></i></a></li>
                         <li><a href=""><i class="ion-social-linkedin-outline"></i></a></li>
                         <li><a href=""><i class="ion-social-googleplus"></i></a></li>
                     </ul>
+                    -->
                 </div>
             </div>
         </div>
