:computer: Event registration link

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@ The event will be free of charge and hosted by Research Computing Service of Uni
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Registration &amp; Pricing</h3>
+                  <h3 class="section-title">Registration &amp; Pricing</h3>
+                  <p>The event is free, please register at <a href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">EventBrite</a></p>
                 </div>
             </div>
         </div>
@@ -288,7 +289,7 @@ The event will be free of charge and hosted by Research Computing Service of Uni
 
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <p>The event is free, please register at <a href=""></a></p>
+                                    <p>The event is free, please register at <a href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">EventBrite</a></p>
                                 </div>
                             </div>
                         </div>
