--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <h1>Programming multi-core and many-core HPC systems using Kokkos</h1>
 
-            <a class="btn btn-white" data-scroll href="#registration">Register Now</a>
+            <a class="btn btn-white" data-scroll href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">Register Now</a>
 
         </div>
     </header>
