--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <h1>Programming multi-core and many-core HPC systems using Kokkos</h1>
 
-            <a class="btn btn-white" data-scroll href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">Register Now</a>
+            <a class="btn btn-white" href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040" target="_blank">Register Now</a>
 
         </div>
     </header>
@@ -186,7 +186,7 @@ The event will be free of charge and hosted by Research Computing Service of Uni
             <div class="row">
                 <div class="col-md-12">
                   <h3 class="section-title">Registration &amp; Pricing</h3>
-                  <p>The event is free, please register at <a href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">EventBrite</a></p>
+                  <p>The event is free, please register at <a class="btn btn-black" href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040" target="_blank">EventBrite</a></p>
                 </div>
             </div>
         </div>
