:computer: Some FAQs

--- a/index.html
+++ b/index.html
@@ -284,7 +284,6 @@ The event will be free of charge and hosted by Research Computing Service of Uni
                                     <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> What is the price of the ticket ?</a>
                                 </h4>
                             </div>
-
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p>The event is free, please register at <a href="https://www.eventbrite.com/e/programming-multi-core-and-many-core-hpc-systems-using-kokkos-registration-41819764040">EventBrite</a></p>
@@ -303,40 +302,40 @@ The event will be free of charge and hosted by Research Computing Service of Uni
                                 <div class="panel-body">Registration and lunch</div>
                             </div>
                         </div>
-                        <!--
+
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree"> Office address ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Do I have to bring my own laptop or will there be workstations at the venue?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">We recommend you to bring your own laptop. There will be enough power sockets and power extensions to accomodate all attendees. The venue is not equipped with workstations.</div>
                             </div>
                         </div>
 
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingFour">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour"> How should I dress ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">Would I be able to access Wi-Fi at the venue?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">The venue has access to Eduroam. If you do not have access to Eduroam, we can provide you with access credentials. In which case, please get in touch with us in advance.</div>
                             </div>
                         </div>
-                        -->
+
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingFive">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive"> I have specific questions that are not addressed here. Who can help me ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">How can I reach the venue?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-                                <div class="panel-body">Email us</div>
+                                <div class="panel-body">University Information Services (<a href="https://www.uis.cam.ac.uk">https://www.uis.cam.ac.uk</a>) is located in West Cambridge at the Roger Needham Building, 7 JJ Thomson Avenue, Cambridge CB3 0RB. It is possible to reach the venue by car or by bus (City 4 which stops in Madingley Road or Uni Bus). For more information visit: <a href="https://www.uis.cam.ac.uk/about-us/where-we-are">https://www.uis.cam.ac.uk/about-us/where-we-are</a></div>
                             </div>
                         </div>
                     </div>
