:computer: Event location

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ The event will be free of charge and hosted by Research Computing Service of Uni
                             </div>
 
                             <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
-                                <div class="panel-body">University Information Services (<a href="https://www.uis.cam.ac.uk">https://www.uis.cam.ac.uk</a>) is located in West Cambridge at the Roger Needham Building, 7 JJ Thomson Avenue, Cambridge CB3 0RB. It is possible to reach the venue by car or by bus (City 4 which stops in Madingley Road or Uni Bus). For more information visit: <a href="https://www.uis.cam.ac.uk/about-us/where-we-are">https://www.uis.cam.ac.uk/about-us/where-we-are</a></div>
+                                <div class="panel-body">University Information Services (<a href="https://www.uis.cam.ac.uk">https://www.uis.cam.ac.uk</a>) is located in West Cambridge at the Roger Needham Building, 7 JJ Thomson Avenue, Cambridge CB3 0RB. It is possible to reach the venue by car or by bus (City 4 which stops in Madingley Road or Uni Bus). For more information visit: <a href="https://www.uis.cam.ac.uk/about-us/where-we-are">https://www.uis.cam.ac.uk/about-us/where-we-are</a>. Please see <a data-scroll href="#locataion">Event location</a></div>
                             </div>
                         </div>
                     </div>
