--- a/index.html
+++ b/index.html
@@ -338,6 +338,55 @@ The event will be free of charge and hosted by Research Computing Service of Uni
                                 <div class="panel-body">University Information Services (<a href="https://www.uis.cam.ac.uk">https://www.uis.cam.ac.uk</a>) is located in West Cambridge at the Roger Needham Building, 7 JJ Thomson Avenue, Cambridge CB3 0RB. It is possible to reach the venue by car or by bus (City 4 which stops in Madingley Road or Uni Bus). For more information visit: <a href="https://www.uis.cam.ac.uk/about-us/where-we-are">https://www.uis.cam.ac.uk/about-us/where-we-are</a>. Please see <a data-scroll href="#locataion">Event location</a></div>
                             </div>
                         </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="headingSix">
+                                <h4 class="panel-title">
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Where can I stay? Are there any recommoded accomodations?</a>
+                                </h4>
+                            </div>
+
+                            <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+                                <div class="panel-body">Unfortunately there are no accomodations available in the West Cambridge campus. We advise to look for accomodation in the city centre or Huntingdon Road. The website <a href="https://www.universityrooms.com">https://www.universityrooms.com</a> is also a good option to look for accomodations provided by Cambridge Colleges.</div>
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="headingSeven">
+                                <h4 class="panel-title">
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">What resources will be used for the practicals / hands-on?</a>
+                                </h4>
+                            </div>
+
+                            <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
+                                <div class="panel-body">We will be able to provide a temporary account on the Cambridge Service of Data Driven Discovery (CSD3, <a href="https://www.csd3.cam.ac.uk"></a>)  cluster. The cluster has Intel Xeon Skylake (x86), GPU and Intel Xeon Phi 2nd generation (Knight Landing). The course materials including the hands-on exercises will be published by the Kokkos group on their GitHub repo and you can use any system you like.
+                                  However, we would recommend you to use CSD3 this will enable us to help you more effectively to solve technical issues, if and when they arise.</div>
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="headingEight">
+                                <h4 class="panel-title">
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">Is there parking space at the venue?</a>
+                                </h4>
+                            </div>
+
+                            <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
+                                <div class="panel-body">Yes, the University Information Services has parking spaces but it is very very limited due to construction works happening near the building. If you need parking please get in touch at the earliest. Madingley Road experiences heavy traffic during peak hour and it can be a bit frustrating. The venue is serviced by Uni4 bus services, which we recommend.</div>
+                            </div>
+                        </div>
+
+                        <div class="panel panel-default">
+                            <div class="panel-heading" role="tab" id="headingNine">
+                                <h4 class="panel-title">
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="false" aria-controls="collapseNine">Will the event be recorded?</a>
+                                </h4>
+                            </div>
+
+                            <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
+                                <div class="panel-body">Unfortunately not, we are not fully equipped to properly record the event. However, all course materials will be publicly available on GitHub</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
