--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ The event will be free of charge and hosted by Research Computing Service of Uni
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingSix">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Where can I stay? Are there any recommoded accomodations?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Where can I stay? Are there any recommended accomodations?</a>
                                 </h4>
                             </div>
 
